# jobtracker

./: docker-compose.yml  job-hunt-command-center.md
backend/: .env  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1cedb3f33a7c_add_users_table_and_user_id_fk_on_jobs.py  1d946b206ace_initial_schema.py  52f4ccf420dd_add_gmail_credentials_table_make_user_.py  7dc7f6b19656_consolidate_interview_statuses.py  a2be7c376c05_add_confirmed_field_to_jobs.py
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: gmail.py  jobs.py  webhooks.py
backend/app/services/: dedup.py
extension/: manifest.json  package.json  popup.html  tsconfig.json  vite.config.ts
extension/src/: App.tsx  index.css
extension/src/components/: JobTracker.tsx
frontend/: components.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/integrations/: page.tsx
frontend/components/: app-sidebar.tsx  job-dialog.tsx  job-link.tsx  jobs-kanban.tsx  jobs-table.tsx  nav-main.tsx  nav-user.tsx  status-badge.tsx
frontend/components/examples/: c-kanban-3.tsx
frontend/lib/: api.ts  job-columns.tsx  jobs.ts  store.ts  types.ts
