[project]
name = "jobtracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "rapidfuzz>=3.14.5",
    "sqlalchemy[asyncio]>=2.0.50",
    "svix>=1.95.1",
    "uvicorn[standard]>=0.48.0",
]
